objects/Project_Line__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_End_Product_Count__c</fullName>
        <label>High End Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Historical_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by a script created to catch up legacy projects with opps</description>
        <inlineHelpText>Indicates that this record was created by a script created to catch up legacy projects with opps</inlineHelpText>
        <label>Historical Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Being_Swapped__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Being Swapped</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Project Lines (Product Being Swapped)</relationshipLabel>
        <relationshipName>Project_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Project Lines</relationshipLabel>
        <relationshipName>Project_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Line_Type__c</fullName>
        <label>Project Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Swap</fullName>
                </value>
                <value>
                    <fullName>Reconfigure</fullName>
                </value>
                <value>
                    <fullName>Removal</fullName>
                </value>
                <value>
                    <fullName>New Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Lines</relationshipLabel>
        <relationshipName>Project_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <label>Project Line</label>
    <nameField>
        <label>Project Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AddSwapReconfigs_Need_to_have_a_Type</fullName>
        <active>true</active>
        <description>If the project record type is add/swap/reconfigure, the project line item type needs to be populated.</description>
        <errorConditionFormula>AND(Project__r.RecordTypeId = &quot;0127A0000009alx&quot;,ISblank(TEXT(( Project_Line_Type__c ))))</errorConditionFormula>
        <errorDisplayField>Project_Line_Type__c</errorDisplayField>
        <errorMessage>Please choose a Project Line Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Lines_creation_or_editing</fullName>
        <active>true</active>
        <errorConditionFormula>AND(not(ispickval(Project__r.Project_Type__c,&quot;Gaming Area Assets&quot;)), NOT( $Profile.Name = &quot;Accel Super User&quot;),NOT( $Profile.Name = &quot;Accel Sales Super User&quot;),NOT( $Profile.Name = &quot;System Administrator&quot;))</errorConditionFormula>
        <errorMessage>You are not allowed to edit this project line. Please contact Salesforce Support if you think you should have access.</errorMessage>
    </validationRules>
</CustomObject>